[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygantter"
scripts = { "pygantter" = "pygantter.cli:main" }
version = "0.1.0"
description = "Convert CSV/TSV/JSON files to Gantt chart images"
authors = [{name = "Your Name"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pandas==1.5.3",
    "plotly==5.15.0",
    "typer==0.9.0",
    "PyYAML==6.0.1",
    "tqdm==4.66.3",
    "colorama==0.4.6",
    "kaleido==0.2.1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist"]
