[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygantter"
version = "0.1.0"
description = "Convert CSV/TSV/JSON files to Gantt chart images"
authors = [{name = "Your Name"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "choreographer==1.1.2",
    "click==8.1.8",
    "colorama==0.4.6",
    "exceptiongroup==1.3.0",
    "iniconfig==2.1.0",
    "kaleido==1.1.0",
    "logistro==2.0.0",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "narwhals==1.42.1",
    "numpy==1.24.4",
    "orjson==3.10.15",
    "packaging==25.0",
    "pandas==2.0.3",
    "plotly==6.3.1",
    "pluggy==1.5.0",
    "Pygments==2.19.2",
    "pytest==9.0.3",
    "pytest-timeout==2.4.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "rich==14.2.0",
    "shellingham==1.5.4",
    "simplejson==3.20.2",
    "six==1.17.0",
    "tomli==2.3.0",
    "tqdm==4.67.1",
    "typer==0.19.2",
    "typing_extensions==4.13.2",
    "tzdata==2025.2"
]

[project.scripts]
pygantter = "pygantter.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist"]
