[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygantter"
version = "0.2.0"
description = "Convert CSV/TSV/JSON task files into Gantt chart images"
authors = [{ name = "Adi-UA" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["gantt", "chart", "project-management", "plotly", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "pandas>=2.0",
    "plotly>=6.0",
    # kaleido 1.x renders static images via a headless Chrome. Install one
    # once with `plotly_get_chrome` (see README). CI installs it explicitly.
    "kaleido>=1.0",
    "typer>=0.12",
    "python-dateutil>=2.8",
    "colorama>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/Adi-UA/PyGantter"
Issues = "https://github.com/Adi-UA/PyGantter/issues"

[project.scripts]
pygantter = "pygantter.cli:run"

[tool.setuptools.packages.find]
include = ["pygantter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
