[metadata]
name = pygantter
version = 0.1.0
description = Convert CSV/TSV/JSON files to Gantt chart images
author = Your Name
license = MIT

[options]
packages = find:
install_requires =
    pandas
    plotly
    typer
    PyYAML
    tqdm
    colorama
    kaleido

[tool:pytest]
testpaths = tests

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
